# constrained-values

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-workflow.yml  website.yml
constrained_values/: ConstrainedValue_types.py  __init__.py  constrained_value_types.py  response.py  status.py  strategies.py  value.py
docs/: introduction.md
examples/: 01_value_equality_and_hash.py  02_value_ordering_same_class.py  03_constrained_pass_through.py  04_constrained_failure.py  05_truthiness_and_ok.py  06_unwrap_usage.py  07_str_and_format.py  08_hashing_valid_vs_invalid.py  09_chained_transforms.py  10_type_validation_strategy.py  11_same_type_validation_strategy.py  12_range_with_coercion.py  13_enum_with_class.py  14_enum_with_members_sequence.py  15_enum_with_plain_values.py  16_enum_config_errors_no_throw.py  17_coerce_to_type.py  18_custom_sanitizer_transform.py  19_strict_validated_value.py  20_sorting_with_invalid.py  21_cross_class_ordering_type_error.py  22_unknown_strategy_handler.py  23_config_validation.py  24_money_amount_decimal.py  25_uuid_value.py  26_url_value.py  27_email_value.py  28_date_parsing.py  29_records_validation.py  30_pipeline_logging.py  31_dataclass_integration.py  readme_example_1.py  readme_example_2.py  readme_example_3.py  readme_level_1.py
tests/: test_ConstrainedValue_types.py  test_constrainedValue_types.py  test_response.py  test_strategies.py  test_validated_types.py  test_value.py
validated_value/: ConstrainedValue_types.py  __init__.py  response.py  strategies.py  validated_types.py  value.py
(+1 files in other folders)
